# stltohtml

./: CMakeLists.txt  README.md  buildheader.py  example.html  main.cpp  main.js  mainjs.h
test/: brick.stl
